# ai-sre-investigator

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  agentdb.rvf  docker-compose.yml
.githooks/: pre-commit
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  budget.py  events.py  loop.py  safe_executor.py
backend/app/api/: routes.py
backend/app/assets/: playbooks.yaml  service_catalog.yaml
backend/app/knowledge/: store.py
backend/app/llm/: model_registry.py
backend/app/observability/: metrics.py
backend/app/persistence/: session_store.py
backend/app/playbooks/: models.py  registry.py
backend/app/services/: service_profile.py
backend/app/tools/: base.py  loki.py  mimir.py  registry.py  tempo.py
backend/app/tools/ql/: validators.py
backend/data/: rca_knowledge.db  sessions.db
backend/tests/integration/: test_full_loop.py
backend/tests/unit/agent/: test_loop.py  test_safe_executor.py  test_self_heal.py
backend/tests/unit/api/: test_routes.py  test_supplementary_routes.py
backend/tests/unit/knowledge/: test_knowledge_store.py
backend/tests/unit/llm/: test_model_registry.py
backend/tests/unit/observability/: test_metrics.py
backend/tests/unit/persistence/: test_session_store.py
backend/tests/unit/playbooks/: test_playbook_registry.py
backend/tests/unit/ql/: test_validators.py
backend/tests/unit/services/: test_service_profile.py
backend/tests/unit/tools/: test_base.py  test_loki.py  test_mimir.py  test_registry.py  test_tempo.py
(+169 files in other folders)
